# flask_skeleton

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  gunicorn_starter.sh  pyproject.toml  requirements.txt  test.db
.github/workflows/: python-app.yml
app/: __init__.py  constants.py  consumer.py  gunicorn_starter.sh  producer.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: distributor_view.py  employee_view.py
app/controllers/: README.md  __init__.py  distributor_controller.py  employee_controller.py
app/core/: __init__.py  extensions.py  instance.py  notifier.py  result.py  service_result.py
app/core/exceptions/: HTTPException.py  __init__.py  app_exceptions.py
app/core/factory/: factory.py
app/core/repository/: __init__.py
app/core/repository/base/: crud_repository_interface.py  mongo_base_repository.py  sql_base_repository.py
app/core/service_interfaces/: __init__.py  auth_service_interface.py  cache_service_interface.py
app/core/utils/: __init__.py  auth.py  encoders.py  guid.py  structure.py  validator.py
app/factory/: README.md
app/models/: README.md  __init__.py  auth_token_model.py  distributor_model.py  employee_model.py
app/notifications/: __init__.py  sms_notification_handler.py
app/repositories/: README.md  __init__.py  distributor_repository.py  employee_repository.py  token_repository.py
app/schema/: README.md  __init__.py  auth_schema.py  distributor_schema.py  employee_schema.py
app/services/: README.md  __init__.py  keycloak_service.py  redis_service.py
app/static/: swagger.json
core/: README.md  __init__.py  api_spec.py  instance.py  notification_handler.py
core/exceptions/: __init__.py  app_exceptions.py  exception_handler.py
core/factory/: seeder.py
core/generators/: __init__.py  resource_generator.py
core/repository/base/: __init__.py  sql_base_repository.py
core/role_mapper/: role_mapper.py
migrations/: env.py
migrations/versions/: 405e3d7d1bc5_.py  555ae80cb46e_.py  8527b528c4c0_.py  9555fc0131b3_.py  b40854c41168_.py  e633b396cec6_.py
tests/: README.md
tests/controllers/: test_distributor_controller.py  test_employee_controller.py
tests/repositories/: test_employee_repository.py
tests/utils/: base_test_case.py  mock_auth_service.py
tests/views/: test_distributor_views.py  test_employee_views.py
